fix property image alignment

--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -6,6 +6,9 @@ a.button, a.button:active, a.button:visited
   border-radius: $margin-tiny
   font-size: $font-size-small
 
+#property-image-row
+  flex-wrap: nowrap 
+
 // ******************************************************
 
 // HIGHLIGHTS
